--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.0",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1"
   },
