--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-sound": "^0.11.2",
     "react-native-webview": "^13.4.0"
   },
   "devDependencies": {
